# fd-eval-harness

./: .gitignore  CURSOR_PROMPT.md  LICENSE  README.md  REFERENCES.md  pyproject.toml
_ui_prototype/: README.md  app.py
_ui_prototype/static/: index.html
docs/: DESIGN.md  ROADMAP.md  TASKS.md
examples/: run_evaluation_programmatically.py  tool_use_example.py
src/fd_eval/: __init__.py  cli.py
src/fd_eval/adapters/: __init__.py  energy_vad.py  moshi.py  openai_realtime.py  tool_use_stub.py
src/fd_eval/core/: __init__.py  adapter.py  audio_session.py  helpers.py  prediction_stream.py  registry.py  task.py  task_result.py
src/fd_eval/data/: __init__.py  loader.py  remote.py
src/fd_eval/prompts/: interruption_state_update.md
src/fd_eval/tasks/: __init__.py  _types.py  interruption_state_update.py  tool_use_under_disfluency.py  turn_taking_latency.py  voice_activity.py
tests/: test_cli.py  test_smoke.py
tests/adapters/: test_energy_vad.py  test_moshi.py  test_openai_realtime.py
tests/core/: test_audio_session.py  test_collect_all.py  test_fixtures_roundtrip.py  test_registry.py  test_task_validation.py
tests/data/: test_remote.py
tests/fixtures/: __init__.py  dummy_labels.json  synthetic_audio.py  tool_use_labels.json
tests/tasks/: test_interruption_state_update.py  test_tool_use_under_disfluency.py  test_turn_taking_latency.py  test_voice_activity.py
