[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fd-eval-harness"
version = "0.1.0.dev0"
description = "Evaluation harness for full-duplex speech-to-speech (FD STS) models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Fullduplex.ai", email = "hello@fullduplex.ai" },
]
keywords = [
  "speech",
  "evaluation",
  "benchmark",
  "full-duplex",
  "audio",
  "speech-to-speech",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
  "numpy>=1.24",
  "soundfile>=0.12",
  "pyyaml>=6.0",
  "moshi",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.4",
]
hf = [
  "torch>=2.0",
  "transformers>=4.40",
  "librosa>=0.10",
]
llm-judge = [
  "openai>=1.0.0",
]
realtime = [
  "websockets>=12.0",
]

[project.scripts]
fd-eval = "fd_eval.cli:main"

[project.entry-points."fd_eval.tasks"]
voice_activity_detection = "fd_eval.tasks.voice_activity:VoiceActivityDetection"
turn_taking_latency = "fd_eval.tasks.turn_taking_latency:TurnTakingLatency"
tool_use_under_disfluency = "fd_eval.tasks.tool_use_under_disfluency:ToolUseUnderDisfluency"
interruption_state_update = "fd_eval.tasks.interruption_state_update:InterruptionStateUpdate"

[project.entry-points."fd_eval.adapters"]
moshi = "fd_eval.adapters.moshi:MoshiAdapter"
energy_vad = "fd_eval.adapters.energy_vad:EnergyVADAdapter"
tool_use_stub = "fd_eval.adapters.tool_use_stub:ToolUseStubAdapter"
openai_realtime = "fd_eval.adapters.openai_realtime:OpenAIRealtimeAdapter"

[project.urls]
Homepage = "https://github.com/fullduplexai/fd-eval-harness"
Documentation = "https://github.com/fullduplexai/fd-eval-harness/tree/main/docs"
Repository = "https://github.com/fullduplexai/fd-eval-harness"
Issues = "https://github.com/fullduplexai/fd-eval-harness/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fd_eval"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--cov=fd_eval --cov-report=term-missing --cov-branch"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "network: marks tests that require network access to remote services (deselect with '-m \"not network\"')",
]
